--- a/graphgrid-sdk-java-core/pom.xml
+++ b/graphgrid-sdk-java-core/pom.xml
@@ -7,12 +7,14 @@
     <parent>
         <groupId>com.graphgrid</groupId>
         <artifactId>graphgrid-sdk-java-pom</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.graphgrid</groupId>
     <artifactId>graphgrid-sdk-java-core</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <name>Graph Grid :: SDK :: Java :: Core</name>
 
 
 </project>
