--- a/graphgrid-sdk-java-files/pom.xml
+++ b/graphgrid-sdk-java-files/pom.xml
@@ -7,12 +7,22 @@
     <parent>
         <groupId>com.graphgrid</groupId>
         <artifactId>graphgrid-sdk-java-pom</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.graphgrid</groupId>
     <artifactId>graphgrid-sdk-java-files</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <name>Graph Grid :: SDK :: Java :: Files</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.graphgrid</groupId>
+            <artifactId>graphgrid-sdk-java-core</artifactId>
+            <version>${graphgridsdkjava.version}</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
