--- a/graphgrid-sdk-java-files/pom.xml
+++ b/graphgrid-sdk-java-files/pom.xml
@@ -22,6 +22,21 @@
             <artifactId>graphgrid-sdk-java-core</artifactId>
             <version>${graphgridsdkjava.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpcomponents.httpclient.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
