--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <jackson.version>2.6.7</jackson.version>
         <junit.version>4.12</junit.version>
         <commons.io.version>2.4</commons.io.version>
+        <commons.lang.version>3.7</commons.lang.version>
+        <httpcomponents.httpclient.version>4.5.5</httpcomponents.httpclient.version>
     </properties>
 
 </project>
