--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,12 @@
     <modules>
         <module>graphgrid-sdk-java-core</module>
         <module>graphgrid-sdk-java-files</module>
+        <module>graphgrid-sdk-java-tests</module>
     </modules>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <graphgridsdkjava.version>${project.version}</graphgridsdkjava.version>
         <jackson.version>2.6.7</jackson.version>
         <junit.version>4.12</junit.version>
