use pom configs

--- a/graphgrid-sdk-java-tests/src/test/resources/config/application-test.properties
+++ b/graphgrid-sdk-java-tests/src/test/resources/config/application-test.properties
@@ -1,9 +1,8 @@
 # configure security context
-spring.oauth.baseUrl=na
 spring.oauth.client.id=na
 spring.oauth.client.secret=na
-spring.oauth.tokenUrl=na
-spring.oauth.checkTokenUrl=na
+spring.oauth.baseSecurityUrl=na
+spring.oauth.token.url=na
 spring.oauth.token.client.id=na
 spring.oauth.token.client.secret=na
 # only for testing purpose
