--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <commons.lang.version>3.7</commons.lang.version>
         <httpcomponents.httpclient.version>4.5.5</httpcomponents.httpclient.version>
         <version.java>1.8</version.java>
+        <slf4j.version>1.7.25</slf4j.version>
         <version.org.kuali.maven.wagons>1.2.1</version.org.kuali.maven.wagons>
         <maven.repository.s3.snapshots>s3://graphgrid-repos/snapshots</maven.repository.s3.snapshots>
         <maven.repository.s3.releases>s3://graphgrid-repos/releases</maven.repository.s3.releases>
