--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <commons.lang.version>3.7</commons.lang.version>
         <httpcomponents.httpclient.version>4.5.5</httpcomponents.httpclient.version>
         <version.java>1.8</version.java>
+        <version.org.apache.maven.wagon>3.1.0</version.org.apache.maven.wagon>
         <maven.repository.s3.snapshots>s3://graphgrid-repos/snapshots</maven.repository.s3.snapshots>
         <maven.repository.s3.releases>s3://graphgrid-repos/releases</maven.repository.s3.releases>
     </properties>
@@ -122,5 +123,15 @@
             </build>
         </profile>
     </profiles>
+
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.kuali.maven.wagons</groupId>
+                <artifactId>maven-s3-wagon</artifactId>
+                <version>${version.org.kuali.maven.wagons}</version>
+            </extension>
+        </extensions>
+    </build>
 
 </project>
