--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
             <modules>
                 <module>graphgrid-sdk-java-core</module>
                 <module>graphgrid-sdk-java-files</module>
+                <module>graphgrid-sdk-java-fuze</module>
                 <module>graphgrid-sdk-java-ml</module>
                 <module>graphgrid-sdk-java-tests</module>
             </modules>
