--- a/graphgrid-sdk-java-fuze/pom.xml
+++ b/graphgrid-sdk-java-fuze/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.graphgrid</groupId>
         <artifactId>graphgrid-sdk-java-pom</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>1.3.0.story-166567611-cleanup-SNAPSHOT</version>
     </parent>
 
     <artifactId>graphgrid-sdk-java-fuze</artifactId>
