--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.graphgrid</groupId>
     <artifactId>graphgrid-sdk-java-pom</artifactId>
-    <version>1.3.0.story-166567611-cleanup-SNAPSHOT</version>
+    <version>1.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>GraphGrid :: SDK :: Java :: Parent</name>
