--- a/graphgrid-sdk-java-fuze/pom.xml
+++ b/graphgrid-sdk-java-fuze/pom.xml
@@ -8,6 +8,7 @@
         <groupId>com.graphgrid</groupId>
         <artifactId>graphgrid-sdk-java-pom</artifactId>
         <version>1.3.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
 
     <artifactId>graphgrid-sdk-java-fuze</artifactId>
