--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,9 @@
-# Compiled class file
-*.class
+# System Files
+*.DS_Store
 
-target/
+# IDEA
+.idea
 *.iml
-.idea/
 
-# Log file
-*.log
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-.DS_Store
+# Maven
+target/
