add Config module

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
+                <module>graphgrid-sdk-java-config</module>
                 <module>graphgrid-sdk-java-core</module>
                 <module>graphgrid-sdk-java-files</module>
                 <module>graphgrid-sdk-java-fuze</module>
