--- a/graphgrid-sdk-java-tests/pom.xml
+++ b/graphgrid-sdk-java-tests/pom.xml
@@ -12,6 +12,7 @@
     </parent>
 
     <artifactId>graphgrid-sdk-java-tests</artifactId>
+    <version>${revision}</version>
     <packaging>jar</packaging>
 
     <name>GraphGrid :: SDK :: Java :: Tests</name>
