--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.graphgrid</groupId>
     <artifactId>graphgrid-sdk-java-pom</artifactId>
-    <version>${revision}</version>
+    <version>1.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>GraphGrid :: SDK :: Java :: Parent</name>
