--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.graphgrid.boot</groupId>
+        <artifactId>graphgrid-boot-parent</artifactId>
+        <version>1.3.0-SNAPSHOT</version>
+        <relativePath>../graphgrid-boot-build/graphgrid-boot-parent</relativePath>
+    </parent>
 
     <groupId>com.graphgrid</groupId>
     <artifactId>graphgrid-sdk-java-pom</artifactId>
